[gd_scene load_steps=11 format=3 uid="uid://cid0gwgt0yh1p"]

[ext_resource type="Script" uid="uid://0w8cro1mphn2" path="res://main_window/side_panel/settings/settings.gd" id="1_xu2b7"]
[ext_resource type="Script" uid="uid://6f4n5n4dfbfm" path="res://custom/padded_scrollbar.gd" id="2_r5ote"]
[ext_resource type="PackedScene" uid="uid://dyuqr0r0y8hub" path="res://main_window/side_panel/settings/collapsible_category/collapsible_category.tscn" id="3_jtwi2"]
[ext_resource type="Script" uid="uid://bqai4pv020yjf" path="res://custom/tooltip.gd" id="4_70x8g"]
[ext_resource type="Texture2D" uid="uid://c4185sydmovdc" path="res://main_window/side_panel/settings/images/open.svg" id="4_bf631"]
[ext_resource type="Texture2D" uid="uid://bb0r26k1ynt7j" path="res://main_window/side_panel/settings/collapsible_category/images/folded.svg" id="4_p036x"]
[ext_resource type="Script" uid="uid://dmval2atd2at7" path="res://custom/formatted_spin_box.gd" id="5_px7qq"]
[ext_resource type="Texture2D" uid="uid://cgn2tyjgkapl2" path="res://main_window/side_panel/settings/images/reset.svg" id="7_amjql"]
[ext_resource type="FontFile" uid="uid://c7b83cfl74of8" path="res://theme/fonts/OpenSans-ExtraBoldItalic.ttf" id="7_fjnu2"]
[ext_resource type="FontFile" uid="uid://clgk36lj6qey" path="res://theme/fonts/OpenSans-ExtraBold.ttf" id="7_phjvb"]

[node name="Settings" type="VBoxContainer"]
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 337.0
grow_vertical = 2
theme_type_variation = &"MediumSeparation"
script = ExtResource("1_xu2b7")

[node name="Heading" type="Label" parent="."]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "Settings"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="PaddedScrollbar" type="MarginContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("2_r5ote")

[node name="VBox" type="VBoxContainer" parent="ScrollContainer/PaddedScrollbar"]
layout_mode = 2
theme_type_variation = &"MediumSeparation"

[node name="General" parent="ScrollContainer/PaddedScrollbar/VBox" instance=ExtResource("3_jtwi2")]
layout_mode = 2
theme_type_variation = &"TinySeparation"

[node name="Heading" parent="ScrollContainer/PaddedScrollbar/VBox/General" index="0"]
text = "GENERAL"
icon = ExtResource("4_p036x")

[node name="StorePath" type="VBoxContainer" parent="ScrollContainer/PaddedScrollbar/VBox/General/Content" index="0"]
unique_name_in_owner = true
layout_mode = 2

[node name="Setting" type="HBoxContainer" parent="ScrollContainer/PaddedScrollbar/VBox/General/Content/StorePath"]
layout_mode = 2
theme_type_variation = &"SmallSeparation"

[node name="Label" type="Label" parent="ScrollContainer/PaddedScrollbar/VBox/General/Content/StorePath/Setting"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme_type_variation = &"HeaderSmall"
text = "Store Path"
vertical_alignment = 2

[node name="Change" type="Button" parent="ScrollContainer/PaddedScrollbar/VBox/General/Content/StorePath/Setting"]
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_constants/icon_max_width = 20
icon = ExtResource("4_bf631")

[node name="Tooltip" type="Node" parent="ScrollContainer/PaddedScrollbar/VBox/General/Content/StorePath/Setting/Change"]
script = ExtResource("4_70x8g")
text = "Open Directory"
popup_position = 5

[node name="Explanation" type="RichTextLabel" parent="ScrollContainer/PaddedScrollbar/VBox/General/Content/StorePath"]
modulate = Color(1, 1, 1, 0.607843)
layout_mode = 2
theme_type_variation = &"Explanation"
theme_override_fonts/bold_font = ExtResource("7_phjvb")
bbcode_enabled = true
text = "[fill]The location on your device in which Habituary will store your to-dos. [b]It is highly recommended you keep regular backups of this directory to prevent data loss in case of errors![/b][/fill]"
fit_content = true

[node name="UIScale" type="VBoxContainer" parent="ScrollContainer/PaddedScrollbar/VBox/General/Content" index="1"]
unique_name_in_owner = true
layout_mode = 2

[node name="Setting" type="HBoxContainer" parent="ScrollContainer/PaddedScrollbar/VBox/General/Content/UIScale"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/PaddedScrollbar/VBox/General/Content/UIScale/Setting"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme_type_variation = &"HeaderSmall"
text = "UI Scale Factor"

[node name="ScaleFactor" type="SpinBox" parent="ScrollContainer/PaddedScrollbar/VBox/General/Content/UIScale/Setting"]
layout_mode = 2
step = 0.01
alignment = 1
script = ExtResource("5_px7qq")
format_string = "%0.2f"

[node name="Explanation" type="RichTextLabel" parent="ScrollContainer/PaddedScrollbar/VBox/General/Content/UIScale"]
modulate = Color(1, 1, 1, 0.607843)
layout_mode = 2
theme_type_variation = &"Explanation"
theme_override_fonts/bold_italics_font = ExtResource("7_fjnu2")
bbcode_enabled = true
text = "[fill]All interface elements of this app will be scaled by this factor. If you use a HiDPI display, and Habituary appears too small, try a higher value.[/fill]"
fit_content = true

[node name="DayStart" type="VBoxContainer" parent="ScrollContainer/PaddedScrollbar/VBox/General/Content" index="2"]
unique_name_in_owner = true
layout_mode = 2

[node name="Setting" type="HBoxContainer" parent="ScrollContainer/PaddedScrollbar/VBox/General/Content/DayStart"]
layout_mode = 2
theme_type_variation = &"TinySeparation"

[node name="Label" type="Label" parent="ScrollContainer/PaddedScrollbar/VBox/General/Content/DayStart/Setting"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme_type_variation = &"HeaderSmall"
text = "Start Day At"

[node name="Hours" type="SpinBox" parent="ScrollContainer/PaddedScrollbar/VBox/General/Content/DayStart/Setting"]
layout_mode = 2
max_value = 23.0
alignment = 1
select_all_on_focus = true
script = ExtResource("5_px7qq")
format_string = "%02d"

[node name="Colon" type="Label" parent="ScrollContainer/PaddedScrollbar/VBox/General/Content/DayStart/Setting"]
layout_mode = 2
text = " : "

[node name="Minutes" type="SpinBox" parent="ScrollContainer/PaddedScrollbar/VBox/General/Content/DayStart/Setting"]
layout_mode = 2
max_value = 59.0
alignment = 1
script = ExtResource("5_px7qq")
format_string = "%02d"

[node name="Explanation" type="RichTextLabel" parent="ScrollContainer/PaddedScrollbar/VBox/General/Content/DayStart"]
modulate = Color(1, 1, 1, 0.607843)
layout_mode = 2
theme_type_variation = &"Explanation"
bbcode_enabled = true
text = "[fill]After reaching this time of the day, Habituary will automatically move the list view one day forward.[/fill]"
fit_content = true

[node name="EnableCaptureReviews" type="VBoxContainer" parent="ScrollContainer/PaddedScrollbar/VBox/General/Content" index="3"]
unique_name_in_owner = true
layout_mode = 2

[node name="Setting" type="HBoxContainer" parent="ScrollContainer/PaddedScrollbar/VBox/General/Content/EnableCaptureReviews"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/PaddedScrollbar/VBox/General/Content/EnableCaptureReviews/Setting"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme_type_variation = &"HeaderSmall"
text = "Capture Reviews"

[node name="Options" type="CheckButton" parent="ScrollContainer/PaddedScrollbar/VBox/General/Content/EnableCaptureReviews/Setting"]
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
button_pressed = true

[node name="Explanation" type="RichTextLabel" parent="ScrollContainer/PaddedScrollbar/VBox/General/Content/EnableCaptureReviews"]
modulate = Color(1, 1, 1, 0.607843)
layout_mode = 2
theme_type_variation = &"Explanation"
theme_override_fonts/bold_italics_font = ExtResource("7_fjnu2")
bbcode_enabled = true
text = "[fill]If enabled, Habituary will prompt you on startup to review the to-dos from your capture list.[fill]"
fit_content = true

[node name="ListView" parent="ScrollContainer/PaddedScrollbar/VBox" instance=ExtResource("3_jtwi2")]
layout_mode = 2
theme_type_variation = &"TinySeparation"

[node name="Heading" parent="ScrollContainer/PaddedScrollbar/VBox/ListView" index="0"]
text = "LIST VIEW"

[node name="TodayPosition" type="VBoxContainer" parent="ScrollContainer/PaddedScrollbar/VBox/ListView/Content" index="0"]
unique_name_in_owner = true
layout_mode = 2

[node name="Setting" type="HBoxContainer" parent="ScrollContainer/PaddedScrollbar/VBox/ListView/Content/TodayPosition"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/PaddedScrollbar/VBox/ListView/Content/TodayPosition/Setting"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme_type_variation = &"HeaderSmall"
text = "Current Day Position"

[node name="Options" type="OptionButton" parent="ScrollContainer/PaddedScrollbar/VBox/ListView/Content/TodayPosition/Setting"]
layout_mode = 2

[node name="Explanation" type="RichTextLabel" parent="ScrollContainer/PaddedScrollbar/VBox/ListView/Content/TodayPosition"]
modulate = Color(1, 1, 1, 0.607843)
layout_mode = 2
theme_type_variation = &"Explanation"
bbcode_enabled = true
fit_content = true

[node name="FadeNonTodayDates" type="VBoxContainer" parent="ScrollContainer/PaddedScrollbar/VBox/ListView/Content" index="1"]
unique_name_in_owner = true
layout_mode = 2

[node name="Setting" type="HBoxContainer" parent="ScrollContainer/PaddedScrollbar/VBox/ListView/Content/FadeNonTodayDates"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/PaddedScrollbar/VBox/ListView/Content/FadeNonTodayDates/Setting"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme_type_variation = &"HeaderSmall"
text = "Fade Non-Today Dates"

[node name="Options" type="OptionButton" parent="ScrollContainer/PaddedScrollbar/VBox/ListView/Content/FadeNonTodayDates/Setting"]
layout_mode = 2

[node name="Explanation" type="RichTextLabel" parent="ScrollContainer/PaddedScrollbar/VBox/ListView/Content/FadeNonTodayDates"]
modulate = Color(1, 1, 1, 0.607843)
layout_mode = 2
theme_type_variation = &"Explanation"
theme_override_fonts/bold_italics_font = ExtResource("7_fjnu2")
bbcode_enabled = true
fit_content = true

[node name="ToDos" parent="ScrollContainer/PaddedScrollbar/VBox" instance=ExtResource("3_jtwi2")]
layout_mode = 2
theme_type_variation = &"TinySeparation"

[node name="Heading" parent="ScrollContainer/PaddedScrollbar/VBox/ToDos" index="0"]
text = "TO-DOS"

[node name="HideTickedOffTodos" type="VBoxContainer" parent="ScrollContainer/PaddedScrollbar/VBox/ToDos/Content" index="0"]
unique_name_in_owner = true
layout_mode = 2

[node name="Setting" type="HBoxContainer" parent="ScrollContainer/PaddedScrollbar/VBox/ToDos/Content/HideTickedOffTodos"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/PaddedScrollbar/VBox/ToDos/Content/HideTickedOffTodos/Setting"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme_type_variation = &"HeaderSmall"
text = "Hide Ticked Off To-Dos"

[node name="Options" type="CheckButton" parent="ScrollContainer/PaddedScrollbar/VBox/ToDos/Content/HideTickedOffTodos/Setting"]
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
button_pressed = true

[node name="Explanation" type="RichTextLabel" parent="ScrollContainer/PaddedScrollbar/VBox/ToDos/Content/HideTickedOffTodos"]
modulate = Color(1, 1, 1, 0.607843)
layout_mode = 2
theme_type_variation = &"Explanation"
theme_override_fonts/bold_italics_font = ExtResource("7_fjnu2")
bbcode_enabled = true
fit_content = true

[node name="FadeTickedOffTodos" type="VBoxContainer" parent="ScrollContainer/PaddedScrollbar/VBox/ToDos/Content" index="1"]
unique_name_in_owner = true
layout_mode = 2

[node name="Setting" type="HBoxContainer" parent="ScrollContainer/PaddedScrollbar/VBox/ToDos/Content/FadeTickedOffTodos"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/PaddedScrollbar/VBox/ToDos/Content/FadeTickedOffTodos/Setting"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme_type_variation = &"HeaderSmall"
text = "Fade Ticked Off To-Dos"

[node name="Options" type="CheckButton" parent="ScrollContainer/PaddedScrollbar/VBox/ToDos/Content/FadeTickedOffTodos/Setting"]
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
button_pressed = true

[node name="Explanation" type="RichTextLabel" parent="ScrollContainer/PaddedScrollbar/VBox/ToDos/Content/FadeTickedOffTodos"]
modulate = Color(1, 1, 1, 0.607843)
layout_mode = 2
theme_type_variation = &"Explanation"
bbcode_enabled = true
fit_content = true

[node name="ToDoColors" type="VBoxContainer" parent="ScrollContainer/PaddedScrollbar/VBox/ToDos/Content" index="2"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"TinySeparation"

[node name="Color1" type="HBoxContainer" parent="ScrollContainer/PaddedScrollbar/VBox/ToDos/Content/ToDoColors"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/PaddedScrollbar/VBox/ToDos/Content/ToDoColors/Color1"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme_type_variation = &"HeaderSmall"
text = "To-Do Color #1"

[node name="Reset" type="Button" parent="ScrollContainer/PaddedScrollbar/VBox/ToDos/Content/ToDoColors/Color1"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_constants/icon_max_width = 20
icon = ExtResource("7_amjql")

[node name="Tooltip" type="Node" parent="ScrollContainer/PaddedScrollbar/VBox/ToDos/Content/ToDoColors/Color1/Reset"]
script = ExtResource("4_70x8g")
text = "Reset to Default"
popup_position = 5

[node name="ColorPicker" type="ColorPickerButton" parent="ScrollContainer/PaddedScrollbar/VBox/ToDos/Content/ToDoColors/Color1"]
custom_minimum_size = Vector2(28, 28)
layout_mode = 2
mouse_default_cursor_shape = 2
edit_alpha = false

[node name="Tooltip" type="Node" parent="ScrollContainer/PaddedScrollbar/VBox/ToDos/Content/ToDoColors/Color1/ColorPicker"]
script = ExtResource("4_70x8g")
text = "Click to Choose Color"
popup_position = 5

[node name="Color2" type="HBoxContainer" parent="ScrollContainer/PaddedScrollbar/VBox/ToDos/Content/ToDoColors"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/PaddedScrollbar/VBox/ToDos/Content/ToDoColors/Color2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme_type_variation = &"HeaderSmall"
text = "To-Do Color #2"

[node name="Reset" type="Button" parent="ScrollContainer/PaddedScrollbar/VBox/ToDos/Content/ToDoColors/Color2"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_constants/icon_max_width = 20
icon = ExtResource("7_amjql")

[node name="Tooltip" type="Node" parent="ScrollContainer/PaddedScrollbar/VBox/ToDos/Content/ToDoColors/Color2/Reset"]
script = ExtResource("4_70x8g")
text = "Reset to Default"
popup_position = 5

[node name="ColorPicker" type="ColorPickerButton" parent="ScrollContainer/PaddedScrollbar/VBox/ToDos/Content/ToDoColors/Color2"]
custom_minimum_size = Vector2(28, 28)
layout_mode = 2
mouse_default_cursor_shape = 2
edit_alpha = false

[node name="Tooltip" type="Node" parent="ScrollContainer/PaddedScrollbar/VBox/ToDos/Content/ToDoColors/Color2/ColorPicker"]
script = ExtResource("4_70x8g")
text = "Click to Choose Color"
popup_position = 5

[node name="Color3" type="HBoxContainer" parent="ScrollContainer/PaddedScrollbar/VBox/ToDos/Content/ToDoColors"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/PaddedScrollbar/VBox/ToDos/Content/ToDoColors/Color3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme_type_variation = &"HeaderSmall"
text = "To-Do Color #3"

[node name="Reset" type="Button" parent="ScrollContainer/PaddedScrollbar/VBox/ToDos/Content/ToDoColors/Color3"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_constants/icon_max_width = 20
icon = ExtResource("7_amjql")

[node name="Tooltip" type="Node" parent="ScrollContainer/PaddedScrollbar/VBox/ToDos/Content/ToDoColors/Color3/Reset"]
script = ExtResource("4_70x8g")
text = "Reset to Default"
popup_position = 5

[node name="ColorPicker" type="ColorPickerButton" parent="ScrollContainer/PaddedScrollbar/VBox/ToDos/Content/ToDoColors/Color3"]
custom_minimum_size = Vector2(28, 28)
layout_mode = 2
mouse_default_cursor_shape = 2
edit_alpha = false

[node name="Tooltip" type="Node" parent="ScrollContainer/PaddedScrollbar/VBox/ToDos/Content/ToDoColors/Color3/ColorPicker"]
script = ExtResource("4_70x8g")
text = "Click to Choose Color"
popup_position = 5

[node name="Color4" type="HBoxContainer" parent="ScrollContainer/PaddedScrollbar/VBox/ToDos/Content/ToDoColors"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/PaddedScrollbar/VBox/ToDos/Content/ToDoColors/Color4"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme_type_variation = &"HeaderSmall"
text = "To-Do Color #4"

[node name="Reset" type="Button" parent="ScrollContainer/PaddedScrollbar/VBox/ToDos/Content/ToDoColors/Color4"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_constants/icon_max_width = 20
icon = ExtResource("7_amjql")

[node name="Tooltip" type="Node" parent="ScrollContainer/PaddedScrollbar/VBox/ToDos/Content/ToDoColors/Color4/Reset"]
script = ExtResource("4_70x8g")
text = "Reset to Default"
popup_position = 5

[node name="ColorPicker" type="ColorPickerButton" parent="ScrollContainer/PaddedScrollbar/VBox/ToDos/Content/ToDoColors/Color4"]
custom_minimum_size = Vector2(28, 28)
layout_mode = 2
mouse_default_cursor_shape = 2
edit_alpha = false

[node name="Tooltip" type="Node" parent="ScrollContainer/PaddedScrollbar/VBox/ToDos/Content/ToDoColors/Color4/ColorPicker"]
script = ExtResource("4_70x8g")
text = "Click to Choose Color"
popup_position = 5

[node name="Color5" type="HBoxContainer" parent="ScrollContainer/PaddedScrollbar/VBox/ToDos/Content/ToDoColors"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/PaddedScrollbar/VBox/ToDos/Content/ToDoColors/Color5"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme_type_variation = &"HeaderSmall"
text = "To-Do Color #5"

[node name="Reset" type="Button" parent="ScrollContainer/PaddedScrollbar/VBox/ToDos/Content/ToDoColors/Color5"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_constants/icon_max_width = 20
icon = ExtResource("7_amjql")

[node name="Tooltip" type="Node" parent="ScrollContainer/PaddedScrollbar/VBox/ToDos/Content/ToDoColors/Color5/Reset"]
script = ExtResource("4_70x8g")
text = "Reset to Default"
popup_position = 5

[node name="ColorPicker" type="ColorPickerButton" parent="ScrollContainer/PaddedScrollbar/VBox/ToDos/Content/ToDoColors/Color5"]
custom_minimum_size = Vector2(28, 28)
layout_mode = 2
mouse_default_cursor_shape = 2
edit_alpha = false

[node name="Tooltip" type="Node" parent="ScrollContainer/PaddedScrollbar/VBox/ToDos/Content/ToDoColors/Color5/ColorPicker"]
script = ExtResource("4_70x8g")
text = "Click to Choose Color"
popup_position = 5

[node name="Explanation" type="RichTextLabel" parent="ScrollContainer/PaddedScrollbar/VBox/ToDos/Content/ToDoColors"]
modulate = Color(1, 1, 1, 0.607843)
layout_mode = 2
theme_type_variation = &"Explanation"
theme_override_fonts/bold_italics_font = ExtResource("7_fjnu2")
bbcode_enabled = true
text = "[fill]The set of colors that can be assigned to a to-do's text in the formatting options while editing it. Changing this [u]will[/u] affect existing colored to-dos![/fill]"
fit_content = true

[node name="ShowSubItemCount" type="VBoxContainer" parent="ScrollContainer/PaddedScrollbar/VBox/ToDos/Content" index="3"]
unique_name_in_owner = true
layout_mode = 2

[node name="Setting" type="HBoxContainer" parent="ScrollContainer/PaddedScrollbar/VBox/ToDos/Content/ShowSubItemCount"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/PaddedScrollbar/VBox/ToDos/Content/ShowSubItemCount/Setting"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme_type_variation = &"HeaderSmall"
text = "Show Sub Item Count"

[node name="Options" type="OptionButton" parent="ScrollContainer/PaddedScrollbar/VBox/ToDos/Content/ShowSubItemCount/Setting"]
layout_mode = 2

[node name="Explanation" type="RichTextLabel" parent="ScrollContainer/PaddedScrollbar/VBox/ToDos/Content/ShowSubItemCount"]
modulate = Color(1, 1, 1, 0.607843)
layout_mode = 2
theme_type_variation = &"Explanation"
bbcode_enabled = true
fit_content = true

[node name="Calendar" parent="ScrollContainer/PaddedScrollbar/VBox" instance=ExtResource("3_jtwi2")]
layout_mode = 2
theme_type_variation = &"TinySeparation"

[node name="Heading" parent="ScrollContainer/PaddedScrollbar/VBox/Calendar" index="0"]
text = "CALENDAR"
icon = ExtResource("4_p036x")

[node name="FirstWeekday" type="VBoxContainer" parent="ScrollContainer/PaddedScrollbar/VBox/Calendar/Content" index="0"]
unique_name_in_owner = true
layout_mode = 2

[node name="Setting" type="HBoxContainer" parent="ScrollContainer/PaddedScrollbar/VBox/Calendar/Content/FirstWeekday"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/PaddedScrollbar/VBox/Calendar/Content/FirstWeekday/Setting"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme_type_variation = &"HeaderSmall"
text = "Start Weeks on Monday"

[node name="Options" type="CheckButton" parent="ScrollContainer/PaddedScrollbar/VBox/Calendar/Content/FirstWeekday/Setting"]
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
button_pressed = true

[node name="Explanation" type="RichTextLabel" parent="ScrollContainer/PaddedScrollbar/VBox/Calendar/Content/FirstWeekday"]
modulate = Color(1, 1, 1, 0.607843)
layout_mode = 2
theme_type_variation = &"Explanation"
bbcode_enabled = true
fit_content = true

[node name="OutsideMonthDates" type="VBoxContainer" parent="ScrollContainer/PaddedScrollbar/VBox/Calendar/Content" index="1"]
unique_name_in_owner = true
layout_mode = 2

[node name="Setting" type="HBoxContainer" parent="ScrollContainer/PaddedScrollbar/VBox/Calendar/Content/OutsideMonthDates"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/PaddedScrollbar/VBox/Calendar/Content/OutsideMonthDates/Setting"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme_type_variation = &"HeaderSmall"
text = "Show Outside Month Days"

[node name="Options" type="CheckButton" parent="ScrollContainer/PaddedScrollbar/VBox/Calendar/Content/OutsideMonthDates/Setting"]
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
button_pressed = true

[node name="Explanation" type="RichTextLabel" parent="ScrollContainer/PaddedScrollbar/VBox/Calendar/Content/OutsideMonthDates"]
modulate = Color(1, 1, 1, 0.607843)
layout_mode = 2
theme_type_variation = &"Explanation"
bbcode_enabled = true
fit_content = true

[editable path="ScrollContainer/PaddedScrollbar/VBox/General"]
[editable path="ScrollContainer/PaddedScrollbar/VBox/ListView"]
[editable path="ScrollContainer/PaddedScrollbar/VBox/ToDos"]
[editable path="ScrollContainer/PaddedScrollbar/VBox/Calendar"]
